<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- translated -->
    <string name="main_title">To be an Accountant!</string>
    <string name="app_name">To be an Accountant!</string>
    <string name="action_settings">Settings</string>
    <string name="main_entry_plan">My plan</string>
    <string name="main_entry_test">Test</string>
    <string name="main_entry_overview">Overview</string>
    <string name="create_plan">Create new plan</string>
    <string name="delete_plan">Delete all plans</string>
    <string name="law_name">Law name</string>
    <string name="estimate_days">Plan finish day</string>
    <string name="reading_order">Reading order</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="tax_collection_law">Tax collection law</string>
    <string name="income_tax_law">Income tax</string>
    <string name="land_law">Land law</string>
    <string name="company_law">Company law</string>
    <string name="value_business_law">Value business law</string>
    <string name="estate_gift_tax">Estate gift law</string>
    <string name="business_entity_accounting">Business entity accounting</string>
    <string name="security_exchange_accounting">Security exchange accounting</string>
    <string name="reading_order_chapter">By chapter</string>
    <string name="reading_order_random">Random</string>
    <string name="search_button_next">Next</string>
    <string name="search_button_previous">Previous</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="complete">Complete</string>
    <string name="start_composite_test">Start full test</string>
    <string name="rest_items">"Rest items: "</string>
    <string name="dialog_confirm_to_delete_msg">Click ok to delete this plan</string>
    <string name="dialog_confirm_to_delete_title">Delete plan?</string>
    <string name="dialog_confirm_to_delete_all_msg">Click ok to delete all plans</string>
    <string name="dialog_confirm_to_delete_all_title">Delete all plans?</string>
    <string name="test_type_review">Review</string>
    <string name="test_type_by_law">By law</string>
    <string name="test_type_by_law_random">By law but random</string>
    <string name="toast_developer_mode_opened_hint">Answer will be showed under Garden of Eden</string>
    <string name="toast_developer_mode">Welcome to Garden of Eden :)</string>
    <string name="toast_start_loading">Start to load data</string>
    <string name="toast_start_updating">Start to update data</string>
    <string name="toast_result_ok">Retrieve data successed</string>
    <string name="toast_result_failed">Retrieve data failed</string>
    <string name="toast_download_laws_in_advance">Download some laws in advance</string>
    <string name="toast_remove_plans_in_advance">Remove any plans in advance</string>
    <string name="toast_waiting_for_previous_parsing">Waiting for previous result</string>
    <string name="toast_done_type_plan">Done</string>
    <string name="toast_create_plans_in_advance">Create a plan at first</string>
    <string name="check_update">Check update</string>
    <string name="toast_wrong_estimate_day">Invalidated estimate day,\nthe minimum estimate day is 3</string>
    <string name="basic_setting_title">Settings</string>
    <string name="app_color_theme">App color theme</string>
    <string name="test_activity_finish_real_test">Finish test!</string>
    <string name="confirm_to_exit_dialog_title">Confirm to exit</string>
    <string name="confirm_to_exit_dialog_title_content">Do you want to exit test?</string>
    <string name="do_not_show_this_again">Do not show again</string>
    <string name="total_law_count">Law count</string>
    <string name="setting_confirm_when_exit_test_content">Show alert when exit test</string>
    <string name="setting_confirm_when_exit_test_title">Test alert dialog</string>
    <string name="test_fragment_keep_previous_test">Continue previous test</string>
    <string name="test_fragment_none_previous_test_data">None previous test data</string>
    <string name="law_update_time_dialog_title">Update time</string>
    <string name="share_dialog_title">Share action</string>
    <string name="share_dialog_share_to">Share to</string>
    <string name="share_dialog_send_suggestion">Send suggestion to author</string>
    <string name="share_to_text">I am using </string>
    <string name="share_dialog_rating">Rate this app</string>

    <string-array name="reading_order">
        <item>@string/reading_order_chapter</item>
        <item>@string/reading_order_random</item>
    </string-array>
    <string-array name="over_view_list_sorter">
        <item>by order</item>
        <item>by wrong time</item>
    </string-array>

    <string name="tutorial_title">Click title to share information with friends!</string>
    <string name="tutorial_updating_info">Long-press update button to see the updating info</string>
    <string name="tutorial_setting_info">Long-press space area to start settings</string>
    <string name="no_data_hint_create_plan">Click button below to create new plan</string>
    <string name="no_data_hint_overview">Please update law data in advance</string>
    <string name="no_updated_time">No data</string>
    <string name="settings_enable_eden">Enable Eden</string>
    <string name="law_paragraph_dialog_title">Law paragraph</string>
    <string name="law_paragraph_no_data_hint">Data may not be downloaded completely</string>
    <string name="retrieve_progress">Retrieve progress</string>
    <string name="setting_high_performance_title">High performance</string>
    <string name="setting_high_performance_check">More animations</string>
    <!-- not translated -->

</resources>