<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/create_plan_edit_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/create_plan_edit_item_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/create_plan_edit_item_first_margin_top"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/law_name" />

        <Spinner
            android:id="@+id/law_options"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/create_plan_edit_item_first_margin_top"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_plan_edit_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_plan_edit_1"
        android:layout_margin="@dimen/create_plan_edit_item_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/estimate_days" />

        <EditText
            android:id="@+id/estimate_days"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_plan_edit_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_plan_edit_2"
        android:layout_margin="@dimen/create_plan_edit_item_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/reading_order" />

        <Spinner
            android:id="@+id/reading_order"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_plan_edit_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_plan_edit_3"
        android:layout_margin="@dimen/create_plan_edit_item_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_law_count" />

        <TextView
            android:id="@+id/law_count"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_plan_edit_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/create_plan_edit_3"
        android:layout_margin="@dimen/create_plan_edit_item_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/create_plan_edit_ok_cancel_margin_h"
            android:layout_marginRight="@dimen/create_plan_edit_ok_cancel_margin_h"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/cancel"
            android:textSize="@dimen/general_btn_text_size" />

        <Button
            android:id="@+id/ok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/create_plan_edit_ok_cancel_margin_h"
            android:layout_marginRight="@dimen/create_plan_edit_ok_cancel_margin_h"
            android:layout_weight="1"
            android:background="@drawable/blue_btn_bg"
            android:text="@string/ok"
            android:textSize="@dimen/general_btn_text_size" />
    </LinearLayout>

</RelativeLayout>